--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -3,6 +3,7 @@
 @import "./src/styles/_variables.scss";
 @import "./src/styles/_fonts.scss";
 
+@import "./src/styles/_list.scss";
 @import "./src/styles/_blog-roll.scss"; 
 @import "./src/styles/_intro.scss";
 
